welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value indice
  indice = 0
  ^indexOfValue:10: error: not found: value indice
        indice = i
        ^indexOfValue:17: error: not found: value indice
  return indice
         ^