welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var trouve:Boolean = false
  indice = 0
  while (!trouve)
  {
    for (i <- 0 to nums.length -1)
    {
      if (nums(i)==lookingFor)
      {
        indice = i
        trouve = true
      }
			else
      	trouve = false
    }
  }
  return indice
}